# zephyr-application

./: README.md
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app-test/: CMakeLists.txt
app-test/src/: main.c
app/src/: main.c
boards/: README.md  stm32f4_disco.overlay
boards/st/my_disco/: Kconfig.my_disco  board.yml  my_disco.dts  my_disco.yaml
docs/: ra8m1.dts  stm32f4discovery.dts
drivers/accel/: CMakeLists.txt
dts/bindings/: input_capture.yaml  power_switch.yaml  st,stm32-accel.yaml
overlays/: add_nodes.overlay  enable_mydisco_gpio.overlay  enable_mydisco_pinctrl.overlay
patchs/: 0001-Add-accelerometer-driver.patch  0001-Add-new-gpio-driver-for-stm32f4_disco.patch  0002-Add-new-pinctrl-driver-for-stm32f4_disco.patch  add_gpio_driver.patch  add_pinctrl_driver.patch
